# CppInC

./: CMakeLists.txt
source/c/: app.c
source/cpp/: lib.cpp  lib.h
vsstudio/: generate_vs2015_engine.bat
